syntax = "proto3";

package events.v1;

option go_package = "github.com/Muvi7z/boilerplate/shared/pkg/proto/events/events.v1;events_v1";

message OrderPaid {
  string event_uuid = 1;
  string order_uuid = 2;
  string user_uuid = 3;
  string  payment_method = 4;
  string transaction_uuid = 5;
}

message ShipAssembled {
  string event_uuid = 1;
  string order_uuid = 2;
  string user_uuid = 3;
  int64 build_time_sec = 4;
}